style.css
:root {
  --bg-color: #1F1F28;
  --fg-color: #DCD7BA;

  --border-color: #54546D;
  --link-color: #72A7BC;
  --sel-color: #2D4F67;
  --accent-color: #C0A36E;
  
  --red: #E46876;
  --orange: #FFA066;
  --aqua: #7AA89F;
  --green: #98BB6C;
  --yellow: #E6C384;
}

* {
  margin: 0px;
  padding: 0px;
}

/* general global formats */

body {
  background-color: var(--bg-color);
  background-image: url(./assets/dots.svg);
  color: var(--fg-color);
  font-family: monospace;
  font-size: medium;
  padding: 10px;
  margin: auto;
  max-width: 1200px;
}

h1, h2 {
  color: var(--accent-color);
}

a, a:visited {
  color: var(--link-color);
  text-decoration: none;
}

li::marker {
  color: var(--accent-color);
}

::selection {
  background-color: var(--sel-color);
}

table th, article table td {
  border: 2px solid var(--border-color);
}

table {
  border-collapse: collapse;
  margin: auto;
  width: auto !important;
}

table col {
  width: min-content !important;
}

table td, table tr, table th, table caption {
  padding: 3px 5px;
}

table caption {
  font-weight: bold;
  color: var(--accent-color);
}


/* Header formatting */

header {
  border: 2px solid var(--border-color);
  border-radius: 10px;
  background-color: var(--bg-color);
  padding: 20px;
  margin: 10px;
}

header * {
  text-align: center;
}

header h1 {
  font-size: xx-large;
  text-align: center;
  margin-bottom: 10px;
}

header nav {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

header nav a {
  border: 2px ridge var(--link-color);
  padding: 5px;
}

/* Footer formatting */

footer {
  border: 2px solid var(--border-color);
  border-radius: 10px;
  background-color: var(--bg-color);
  padding: 20px;
  margin: 10px;
  text-align: center;
}

/* main formatting */

main {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

/* toc formatting */

main nav {
  order: 1;
  border: 2px solid var(--border-color);
  border-radius: 10px;
  background-color: var(--bg-color);
  padding: 20px;
  margin: 10px;
  width: 200px;
  position: sticky;
  top: 0px;
  flex-shrink: 0;
}

main nav h1 {
  text-align: center;
  font-size: medium;
  margin-bottom: 5px;
}

main nav ul {
  list-style-type: none;
}

main nav ul ul {
  padding-left: 20px;
}

/* injected text formatting */

article {
  order: 0;
  border: 2px solid var(--border-color);
  border-radius: 10px;
  background-color: var(--bg-color);
  padding: 20px;
  margin: 10px;
  flex-grow: 2;
}

article h1:first-child {
  margin-top: 0px;
}

article h1:not(:first-child) {
  border-top: 2px solid var(--border-color);
  margin-top: 20px;
  padding-top: 20px;
}

article * {
  margin-top: 5px;
}

article h1 {
  font-size: x-large;
  text-decoration: underline;
  text-underline-position: under;
}

article h2, article h3 {
  font-size: medium;
  text-decoration: none;
  margin-top: 15px;
}

article hgroup {
  margin-top: 0px;
  position: relative;
}

article hgroup * {
  display: inline-block;
}

article hgroup .date {
  position: absolute;
  right: 0px;
  bottom: 0px;
}

article ul, article dd {
  padding-left: 20px;
}

article ol {
  padding-left: 30px;
}

article table {
  margin-top: 10px;
}

article table .ball {
  margin-top: 0px;
  margin-right: 5px;
}

article .ball {
  display: inline-block;
  width: 1.5ex;
  height: 1.5ex;
  border-radius: 0.75ex;
}

article li > .ball:first-child {
  margin-left: -13px;
  margin-right: 0px;
}

article .red {
  background-color: var(--red);
}

article .aqua {
  background-color: var(--aqua);
}

article .green {
  background-color: var(--green);
}

article .orange {
  background-color: var(--orange);
}

article .yellow {
  background-color: var(--yellow);
}

